--- a/info.html
+++ b/info.html
@@ -158,18 +158,61 @@
 </section>
 </div>
 </main>
-<footer class="footer-bg">
-<div class="mx-auto max-w-7xl px-6 py-12 lg:px-8">
-<nav class="flex flex-wrap justify-center gap-x-6 gap-y-2 mb-8">
-<a class="text-sm text-slate-500 hover:text-slate-700 transition-colors" href="#">Privacy Policy</a>
-<a class="text-sm text-slate-500 hover:text-slate-700 transition-colors" href="#">Terms of Service</a>
-<a class="text-sm text-slate-500 hover:text-slate-700 transition-colors" href="#">Contact Us</a>
-<a class="text-sm text-slate-500 hover:text-slate-700 transition-colors" href="#">About Unipol</a>
-</nav>
-<p class="text-center text-xs leading-5 text-slate-500">© 2024 BeAuare. All rights reserved. Powered by Unipol.</p>
+<footer class="border-t border-color mt-auto px-10 py-8 bg-header">
+<div class="max-w-7xl mx-auto">
+<div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+<div>
+<div class="flex items-center gap-3 mb-4">
+<svg class="text-primary" fill="none" height="28" viewBox="0 0 48 48" width="28" xmlns="http://www.w3.org/2000/svg">
+<path clip-rule="evenodd" d="M12.0799 24L4 19.2479L9.95537 8.75216L18.04 13.4961L18.0446 4H29.9554L29.96 13.4961L38.0446 8.75216L44 19.2479L35.92 24L44 28.7521L38.0446 39.2479L29.96 34.5039L29.9554 44H18.0446L18.04 34.5039L9.95537 39.2479L4 28.7521L12.0799 24Z" fill="currentColor" fill-rule="evenodd"></path>
+</svg>
+<h3 class="text-xl font-bold tracking-[-0.015em] text-heading">BeAuare</h3>
+</div>
+<p class="text-sm text-muted mb-2">Powered by Unipol</p>
+<p class="text-xs text-muted opacity-75">Your trusted partner in navigating life's uncertainties.</p>
+</div>
+<div>
+<h4 class="text-base font-semibold text-heading mb-4">Quick Links</h4>
+<ul class="space-y-2">
+<li><a class="text-sm text-muted hover-text-primary transition-colors" href="#">Home</a></li>
+<li><a class="text-sm text-muted hover-text-primary transition-colors" href="#">Check-up</a></li>
+<li><a class="text-sm text-muted hover-text-primary transition-colors" href="#">Simulations</a></li>
+<li><a class="text-sm text-muted hover-text-primary transition-colors" href="#">Advice</a></li>
+</ul>
+</div>
+<div>
+<h4 class="text-base font-semibold text-heading mb-4">Resources</h4>
+<ul class="space-y-2">
+<li><a class="text-sm text-muted hover-text-primary transition-colors" href="#">FAQ</a></li>
+<li><a class="text-sm text-muted hover-text-primary transition-colors" href="#">Blog</a></li>
+<li><a class="text-sm text-muted hover-text-primary transition-colors" href="#">Support Center</a></li>
+</ul>
+</div>
+<div>
+<h4 class="text-base font-semibold text-heading mb-4">Legal</h4>
+<ul class="space-y-2">
+<li><a class="text-sm text-muted hover-text-primary transition-colors" href="#">Privacy Policy</a></li>
+<li><a class="text-sm text-muted hover-text-primary transition-colors" href="#">Terms of Service</a></li>
+<li><a class="text-sm text-muted hover-text-primary transition-colors" href="#">Cookie Policy</a></li>
+</ul>
+</div>
+</div>
+<div class="mt-8 pt-8 border-t border-color flex flex-col sm:flex-row justify-between items-center">
+<p class="text-sm text-muted">© 2024 BeAuare. All rights reserved.</p>
+<div class="flex gap-4 mt-4 sm:mt-0">
+<a aria-label="Facebook" class="text-muted hover-text-primary transition-colors" href="#">
+<svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M22.675 0H1.325C.593 0 0 .593 0 1.325v21.351C0 23.407.593 24 1.325 24H12.82v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.313h3.587l-.467 3.622h-3.12V24h6.116c.732 0 1.325-.593 1.325-1.325V1.325C24 .593 23.407 0 22.675 0z"></path></svg>
+</a>
+<a aria-label="Twitter" class="text-muted hover-text-primary transition-colors" href="#">
+<svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.161a4.822 4.822 0 00-.666 2.477c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.213 0-.425-.015-.637A9.952 9.952 0 0024 4.555h.003z"></path></svg>
+</a>
+<a aria-label="Instagram" class="text-muted hover-text-primary transition-colors" href="#">
+<svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.059 1.689.073 4.948.073 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.948-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.162 6.162 6.162 6.162-2.759 6.162-6.162-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4s1.791-4 4-4 4 1.79 4 4-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"></path></svg>
+</a>
+</div>
+</div>
 </div>
 </footer>
 </div>
 </div>
-
 </body></html>
