--- a/landing_page.html
+++ b/landing_page.html
@@ -127,65 +127,58 @@
 </div>
 </div>
 </main>
-<footer class="bg-gray-100 border-t border-gray-200 mt-auto">
-<div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
-<div class="grid grid-cols-2 md:grid-cols-4 gap-8">
+<footer class="border-t border-color mt-auto px-10 py-8 bg-header">
+<div class="max-w-7xl mx-auto">
+<div class="grid grid-cols-1 md:grid-cols-4 gap-8">
 <div>
-<h3 class="text-sm font-semibold text-gray-500 tracking-wider uppercase">BeAuare</h3>
-<ul class="mt-4 space-y-4" role="list">
-<li><a class="text-base text-gray-500 hover:text-gray-900" href="#">About Us</a></li>
-<li><a class="text-base text-gray-500 hover:text-gray-900" href="#">Careers</a></li>
-<li><a class="text-base text-gray-500 hover:text-gray-900" href="#">Press</a></li>
-</ul>
-</div>
-<div>
-<h3 class="text-sm font-semibold text-gray-500 tracking-wider uppercase">Products</h3>
-<ul class="mt-4 space-y-4" role="list">
-<li><a class="text-base text-gray-500 hover:text-gray-900" href="#">Insurance Check-up</a></li>
-<li><a class="text-base text-gray-500 hover:text-gray-900" href="#">Risk Assessment</a></li>
-<li><a class="text-base text-gray-500 hover:text-gray-900" href="#">Simulations</a></li>
-</ul>
-</div>
-<div>
-<h3 class="text-sm font-semibold text-gray-500 tracking-wider uppercase">Support</h3>
-<ul class="mt-4 space-y-4" role="list">
-<li><a class="text-base text-gray-500 hover:text-gray-900" href="#">Help Center</a></li>
-<li><a class="text-base text-gray-500 hover:text-gray-900" href="#">Contact Us</a></li>
-<li><a class="text-base text-gray-500 hover:text-gray-900" href="#">Chatbot</a></li>
-</ul>
-</div>
-<div>
-<h3 class="text-sm font-semibold text-gray-500 tracking-wider uppercase">Legal</h3>
-<ul class="mt-4 space-y-4" role="list">
-<li><a class="text-base text-gray-500 hover:text-gray-900" href="#">Privacy Policy</a></li>
-<li><a class="text-base text-gray-500 hover:text-gray-900" href="#">Terms of Service</a></li>
-</ul>
-</div>
-</div>
-<div class="mt-8 border-t border-gray-200 pt-8 md:flex md:items-center md:justify-between">
-<div class="flex space-x-6 md:order-2">
-<a class="text-gray-400 hover:text-gray-500" href="#">
-<span class="sr-only">Facebook</span>
-<svg aria-hidden="true" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
-<path clip-rule="evenodd" d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z" fill-rule="evenodd"></path>
+<div class="flex items-center gap-3 mb-4">
+<svg class="text-primary" fill="none" height="28" viewBox="0 0 48 48" width="28" xmlns="http://www.w3.org/2000/svg">
+<path clip-rule="evenodd" d="M12.0799 24L4 19.2479L9.95537 8.75216L18.04 13.4961L18.0446 4H29.9554L29.96 13.4961L38.0446 8.75216L44 19.2479L35.92 24L44 28.7521L38.0446 39.2479L29.96 34.5039L29.9554 44H18.0446L18.04 34.5039L9.95537 39.2479L4 28.7521L12.0799 24Z" fill="currentColor" fill-rule="evenodd"></path>
 </svg>
+<h3 class="text-xl font-bold tracking-[-0.015em] text-heading">BeAuare</h3>
+</div>
+<p class="text-sm text-muted mb-2">Powered by Unipol</p>
+<p class="text-xs text-muted opacity-75">Your trusted partner in navigating life's uncertainties.</p>
+</div>
+<div>
+<h4 class="text-base font-semibold text-heading mb-4">Quick Links</h4>
+<ul class="space-y-2">
+<li><a class="text-sm text-muted hover-text-primary transition-colors" href="#">Home</a></li>
+<li><a class="text-sm text-muted hover-text-primary transition-colors" href="#">Check-up</a></li>
+<li><a class="text-sm text-muted hover-text-primary transition-colors" href="#">Simulations</a></li>
+<li><a class="text-sm text-muted hover-text-primary transition-colors" href="#">Advice</a></li>
+</ul>
+</div>
+<div>
+<h4 class="text-base font-semibold text-heading mb-4">Resources</h4>
+<ul class="space-y-2">
+<li><a class="text-sm text-muted hover-text-primary transition-colors" href="#">FAQ</a></li>
+<li><a class="text-sm text-muted hover-text-primary transition-colors" href="#">Blog</a></li>
+<li><a class="text-sm text-muted hover-text-primary transition-colors" href="#">Support Center</a></li>
+</ul>
+</div>
+<div>
+<h4 class="text-base font-semibold text-heading mb-4">Legal</h4>
+<ul class="space-y-2">
+<li><a class="text-sm text-muted hover-text-primary transition-colors" href="#">Privacy Policy</a></li>
+<li><a class="text-sm text-muted hover-text-primary transition-colors" href="#">Terms of Service</a></li>
+<li><a class="text-sm text-muted hover-text-primary transition-colors" href="#">Cookie Policy</a></li>
+</ul>
+</div>
+</div>
+<div class="mt-8 pt-8 border-t border-color flex flex-col sm:flex-row justify-between items-center">
+<p class="text-sm text-muted">© 2024 BeAuare. All rights reserved.</p>
+<div class="flex gap-4 mt-4 sm:mt-0">
+<a aria-label="Facebook" class="text-muted hover-text-primary transition-colors" href="#">
+<svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M22.675 0H1.325C.593 0 0 .593 0 1.325v21.351C0 23.407.593 24 1.325 24H12.82v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.313h3.587l-.467 3.622h-3.12V24h6.116c.732 0 1.325-.593 1.325-1.325V1.325C24 .593 23.407 0 22.675 0z"></path></svg>
 </a>
-<a class="text-gray-400 hover:text-gray-500" href="#">
-<span class="sr-only">Instagram</span>
-<svg aria-hidden="true" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
-<path clip-rule="evenodd" d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.024.06 1.378.06 3.808s-.012 2.784-.06 3.808c-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427.465-1.024.048-1.378.06-3.808.06s-2.784-.012-3.808-.06c-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.048-1.024-.06-1.378-.06-3.808s.012-2.784.06-3.808c.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772A4.902 4.902 0 016.099 2.525c.636-.247 1.363-.416 2.427-.465C9.53 2.013 9.884 2 12.315 2zm0 1.623c-2.387 0-2.704.01-3.638.056-.94.043-1.505.202-1.984.386a3.283 3.283 0 00-1.18.744 3.283 3.283 0 00-.744 1.18c-.184.479-.343 1.044-.386 1.984-.046.934-.056 1.251-.056 3.638s.01 2.704.056 3.638c.043.94.202 1.505.386 1.984a3.283 3.283 0 00.744 1.18 3.283 3.283 0 001.18.744c.479.184 1.044.343 1.984.386.934.046 1.251.056 3.638.056s2.704-.01 3.638-.056c.94-.043 1.505-.202 1.984-.386a3.283 3.283 0 001.18-.744 3.283 3.283 0 00.744-1.18c.184-.479.343-1.044.386-1.984.046-.934.056-1.251.056-3.638s-.01-2.704-.056-3.638c-.043-.94-.202-1.505-.386-1.984a3.283 3.283 0 00-.744-1.18 3.283 3.283 0 00-1.18-.744c-.479-.184-1.044-.343-1.984-.386C15.019 3.633 14.702 3.623 12.315 3.623zm0 1.656a3.723 3.723 0 110 7.445 3.723 3.723 0 010-7.445zm0 5.808a2.084 2.084 0 100-4.168 2.084 2.084 0 000 4.168zm4.965-5.863a1.18 1.18 0 100-2.36 1.18 1.18 0 000 2.36z" fill-rule="evenodd"></path>
-</svg>
+<a aria-label="Twitter" class="text-muted hover-text-primary transition-colors" href="#">
+<svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.161a4.822 4.822 0 00-.666 2.477c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.213 0-.425-.015-.637A9.952 9.952 0 0024 4.555h.003z"></path></svg>
 </a>
-<a class="text-gray-400 hover:text-gray-500" href="#">
-<span class="sr-only">Twitter</span>
-<svg aria-hidden="true" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
-<path d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84"></path>
-</svg>
+<a aria-label="Instagram" class="text-muted hover-text-primary transition-colors" href="#">
+<svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.059 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.059 1.689.073 4.948.073 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.667-.014-4.947-.072-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.948-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.162 6.162 6.162 6.162-2.759 6.162-6.162-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4s1.791-4 4-4 4 1.79 4 4-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"></path></svg>
 </a>
 </div>
-<p class="mt-8 text-base text-gray-400 md:mt-0 md:order-1">
-              © 2024 BeAuare by Unipol. All rights reserved.
-            </p>
 </div>
 </div>
 </footer>
